fix: center no data alert on smaller screens

--- a/async-race/src/app/view/styles/layout/_section.scss
+++ b/async-race/src/app/view/styles/layout/_section.scss
@@ -1,6 +1,7 @@
 .section__no-data {
   color: $color-light-xl;
   font-size: 2em;
+  text-align: center;
 
   height: 100%;
   display: flex;
